[gd_scene load_steps=15 format=3 uid="uid://d1siy4tqi26d0"]

[ext_resource type="PackedScene" uid="uid://b7t5au1bve8ro" path="res://nodes/paddle.tscn" id="1_eux57"]
[ext_resource type="Script" path="res://scripts/main.gd" id="1_fgryf"]
[ext_resource type="PackedScene" uid="uid://cptojpjg7d6jm" path="res://nodes/horizontal_wall.tscn" id="2_vb2a8"]
[ext_resource type="PackedScene" uid="uid://wr0wxtydqoie" path="res://nodes/vertical_wall.tscn" id="3_npbde"]
[ext_resource type="PackedScene" uid="uid://bwkcf1c8fvvjv" path="res://nodes/pause_menu.tscn" id="7_grbso"]
[ext_resource type="PackedScene" uid="uid://b2lyskvbyjjao" path="res://nodes/options_menu.tscn" id="8_u3pbj"]
[ext_resource type="AudioStream" uid="uid://ci5k1n1hbdsil" path="res://assets/sounds/goal-a.wav" id="9_giipq"]
[ext_resource type="PackedScene" uid="uid://betogqa3rav0c" path="res://nodes/end_game_menu.tscn" id="9_l31h6"]
[ext_resource type="AudioStream" uid="uid://d3e2eoathljxf" path="res://assets/sounds/goal-b.wav" id="10_eo7xe"]
[ext_resource type="AudioStream" uid="uid://br2m2hrmrqdm3" path="res://assets/sounds/lost.wav" id="11_mvxwk"]
[ext_resource type="PackedScene" uid="uid://c15q0ccn0exdb" path="res://nodes/block.tscn" id="12_7p5tq"]
[ext_resource type="AudioStream" uid="uid://d4ak8kbst6fxt" path="res://assets/sounds/won.wav" id="12_im6p1"]
[ext_resource type="Texture2D" uid="uid://btffogcehhfxs" path="res://assets/textures/board.png" id="13_axygv"]
[ext_resource type="PackedScene" uid="uid://dxj44hricnn1x" path="res://nodes/shield.tscn" id="14_oil0f"]

[node name="Main" type="Node"]
process_mode = 3
script = ExtResource("1_fgryf")

[node name="Game" type="Node" parent="."]
process_mode = 1

[node name="Shield" parent="Game" instance=ExtResource("14_oil0f")]
position = Vector2(320, 320)

[node name="HorizontalWall" parent="Game" instance=ExtResource("2_vb2a8")]
position = Vector2(320, 7)

[node name="HorizontalWall2" parent="Game" instance=ExtResource("2_vb2a8")]
position = Vector2(320, 354)

[node name="VerticalWall" parent="Game" instance=ExtResource("3_npbde")]
position = Vector2(151, 180)

[node name="VerticalWall2" parent="Game" instance=ExtResource("3_npbde")]
position = Vector2(490, 180)

[node name="Paddle" parent="Game" instance=ExtResource("1_eux57")]
position = Vector2(320, 320)

[node name="Block" parent="." instance=ExtResource("12_7p5tq")]
position = Vector2(304, 192)
durability = 3
color = Vector2(1, 0)

[node name="Block2" parent="." instance=ExtResource("12_7p5tq")]
position = Vector2(336, 192)
color = Vector2(1, 1)

[node name="Block3" parent="." instance=ExtResource("12_7p5tq")]
position = Vector2(304, 184)
color = Vector2(0, 2)

[node name="Block4" parent="." instance=ExtResource("12_7p5tq")]
position = Vector2(336, 184)
color = Vector2(1, 0)

[node name="Block5" parent="." instance=ExtResource("12_7p5tq")]
position = Vector2(304, 176)
color = Vector2(1, 2)

[node name="Block6" parent="." instance=ExtResource("12_7p5tq")]
position = Vector2(336, 176)
color = Vector2(0, 2)

[node name="Block7" parent="." instance=ExtResource("12_7p5tq")]
position = Vector2(304, 168)
color = Vector2(1, 1)

[node name="Block8" parent="." instance=ExtResource("12_7p5tq")]
position = Vector2(336, 168)
color = Vector2(1, 2)

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Score" type="RichTextLabel" parent="UI"]
texture_filter = 1
layout_mode = 0
offset_left = 520.0
offset_top = 48.0
offset_right = 560.0
offset_bottom = 88.0
bbcode_enabled = true
text = "AAAAAAAAAAAA"
scroll_active = false

[node name="Health" type="RichTextLabel" parent="UI"]
texture_filter = 1
layout_mode = 0
offset_left = 520.0
offset_top = 136.0
offset_right = 560.0
offset_bottom = 176.0
bbcode_enabled = true
text = "BBBBBBB"
scroll_active = false

[node name="ScoreLabel" type="RichTextLabel" parent="UI"]
layout_mode = 0
offset_left = 520.0
offset_top = 16.0
offset_right = 584.0
offset_bottom = 56.0
text = "SCORE"

[node name="HealthLabel" type="RichTextLabel" parent="UI"]
layout_mode = 0
offset_left = 520.0
offset_top = 104.0
offset_right = 600.0
offset_bottom = 144.0
text = "HEALTH"

[node name="PauseMenu" parent="." node_paths=PackedStringArray("options_menu") instance=ExtResource("7_grbso")]
visible = false
offset_left = 320.0
offset_top = 180.0
offset_right = 320.0
offset_bottom = 180.0
options_menu = NodePath("../OptionsMenu")

[node name="OptionsMenu" parent="." node_paths=PackedStringArray("previous_menu") instance=ExtResource("8_u3pbj")]
visible = false
offset_left = 320.0
offset_top = 180.0
offset_right = 320.0
offset_bottom = 180.0
previous_menu = NodePath("../PauseMenu")

[node name="EndGameMenu" parent="." instance=ExtResource("9_l31h6")]
visible = false
offset_left = 320.0
offset_top = 180.0
offset_right = 320.0
offset_bottom = 180.0

[node name="AudioEffects" type="Node" parent="."]

[node name="GoalA" type="AudioStreamPlayer" parent="AudioEffects"]
stream = ExtResource("9_giipq")

[node name="GoalB" type="AudioStreamPlayer" parent="AudioEffects"]
stream = ExtResource("10_eo7xe")

[node name="Lost" type="AudioStreamPlayer" parent="AudioEffects"]
stream = ExtResource("11_mvxwk")

[node name="Won" type="AudioStreamPlayer" parent="AudioEffects"]
stream = ExtResource("12_im6p1")

[node name="Board" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(320, 180)
texture = ExtResource("13_axygv")
