[gd_scene load_steps=9 format=3 uid="uid://d1siy4tqi26d0"]

[ext_resource type="PackedScene" uid="uid://b7t5au1bve8ro" path="res://nodes/paddle.tscn" id="1_eux57"]
[ext_resource type="Script" path="res://scripts/main.gd" id="1_fgryf"]
[ext_resource type="PackedScene" uid="uid://cptojpjg7d6jm" path="res://nodes/horizontal_wall.tscn" id="2_vb2a8"]
[ext_resource type="PackedScene" uid="uid://wr0wxtydqoie" path="res://nodes/vertical_wall.tscn" id="3_npbde"]
[ext_resource type="PackedScene" uid="uid://72mjhq8du8y6" path="res://nodes/paddle_ai.tscn" id="5_1jsp7"]
[ext_resource type="PackedScene" uid="uid://bhevwwuu6sbxi" path="res://nodes/line.tscn" id="6_o0qm2"]
[ext_resource type="PackedScene" uid="uid://bwkcf1c8fvvjv" path="res://nodes/pause_menu.tscn" id="7_grbso"]
[ext_resource type="PackedScene" uid="uid://b2lyskvbyjjao" path="res://nodes/options_menu.tscn" id="8_u3pbj"]

[node name="Main" type="Node"]
process_mode = 3
script = ExtResource("1_fgryf")

[node name="Game" type="Node" parent="."]
process_mode = 1

[node name="Paddle" parent="Game" instance=ExtResource("1_eux57")]
position = Vector2(64, 180)

[node name="HorizontalWall" parent="Game" instance=ExtResource("2_vb2a8")]
position = Vector2(320, -10)

[node name="HorizontalWall2" parent="Game" instance=ExtResource("2_vb2a8")]
position = Vector2(320, 370)

[node name="VerticalWall" parent="Game" instance=ExtResource("3_npbde")]
position = Vector2(-10, 180)

[node name="VerticalWall2" parent="Game" instance=ExtResource("3_npbde")]
position = Vector2(650, 180)

[node name="PaddleAI" parent="Game" instance=ExtResource("5_1jsp7")]
position = Vector2(576, 180)

[node name="Line" parent="Game" instance=ExtResource("6_o0qm2")]
position = Vector2(320, 126)

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="P2Score" type="RichTextLabel" parent="UI"]
texture_filter = 1
layout_mode = 0
offset_left = 460.0
offset_top = 20.0
offset_right = 500.0
offset_bottom = 60.0
bbcode_enabled = true
scroll_active = false

[node name="P1Score" type="RichTextLabel" parent="UI"]
texture_filter = 1
layout_mode = 0
offset_left = 140.0
offset_top = 20.0
offset_right = 180.0
offset_bottom = 60.0
bbcode_enabled = true
scroll_active = false

[node name="PauseMenu" parent="." node_paths=PackedStringArray("options_menu") instance=ExtResource("7_grbso")]
offset_left = 320.0
offset_top = 180.0
offset_right = 320.0
offset_bottom = 180.0
options_menu = NodePath("../OptionsMenu")

[node name="OptionsMenu" parent="." node_paths=PackedStringArray("previous_menu") instance=ExtResource("8_u3pbj")]
offset_left = 320.0
offset_top = 180.0
offset_right = 320.0
offset_bottom = 180.0
previous_menu = NodePath("../PauseMenu")
